review fixes part2